new version 3.6.1, split to KDE and GNOME subpackages, add Mistral theme

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
 sources:
   145240-Oxynew.obt: 3d8ebba1ae51099ae2747fb2d14148e7f70485fb
-  openbox-3.6.tar.gz: b3a6163e4f7dd65bc0a387e09d32f94c5cdf5be8
+  mistral_openbox_by_phobi4n-d8ztvoc.7z: 7c75dea8ea5454ec0fb5d83a407a59104aeae9d3
+  openbox-3.6.1.tar.xz: a1f148aedda01f772ce26496dd950e52b57ef62d
