--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
   145240-Oxynew.obt: 3d8ebba1ae51099ae2747fb2d14148e7f70485fb
-  mistral_openbox_by_phobi4n-d8ztvoc.7z: 7c75dea8ea5454ec0fb5d83a407a59104aeae9d3
+  mistral_openbox_by_phobi4n-d8ztvoc.tar.xz: ef721eee0b5f72585586932a70faa6de7c22206a
   openbox-3.6.1.tar.xz: a1f148aedda01f772ce26496dd950e52b57ef62d
